--- a/src/main/resources/proyecto2/proyecto2anddyprendasmatarrita/Prices.fxml
+++ b/src/main/resources/proyecto2/proyecto2anddyprendasmatarrita/Prices.fxml
@@ -15,9 +15,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyecto2.proyecto2anddyprendasmatarrita.PricesController">
    <children>
-      <Pane layoutX="9.0" layoutY="11.0" prefHeight="377.0" prefWidth="167.0" style="-fx-border-color: black;">
+      <Pane layoutX="9.0" layoutY="11.0" prefHeight="377.0" prefWidth="143.0" style="-fx-border-color: black;">
          <children>
-            <MenuButton layoutX="14.0" layoutY="162.0" mnemonicParsing="false" text="Mantenimientos">
+            <MenuButton layoutX="12.0" layoutY="162.0" mnemonicParsing="false" text="Mantenimientos">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#goToMRooms" text="Salas" />
                 <MenuItem mnemonicParsing="false" onAction="#goToMCollections" text="Colecciones" />
@@ -27,18 +27,18 @@
                   <MenuItem mnemonicParsing="false" onAction="#goToMCreditCards" text="Comisiones" />
               </items>
             </MenuButton>
-            <MenuButton layoutX="14.0" layoutY="187.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Entradas">
+            <MenuButton layoutX="12.0" layoutY="187.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Entradas">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#goToSellEntrances" text="Vender entrada" />
                 <MenuItem mnemonicParsing="false" onAction="#goToValidEntrances" text="Validar entrada" />
               </items>
             </MenuButton>
-            <MenuButton layoutX="14.0" layoutY="212.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Valoración">
+            <MenuButton layoutX="12.0" layoutY="212.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Valoración">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#goToRateRooms" text="Valorar salas" />
               </items>
             </MenuButton>
-            <MenuButton layoutX="14.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Reportes">
+            <MenuButton layoutX="12.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Reportes">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#goToReports" text="Reportes" />
               </items>
@@ -46,7 +46,7 @@
             <ImageView fitHeight="140.0" fitWidth="152.0" layoutX="8.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
-      <Pane layoutX="175.0" layoutY="11.0" prefHeight="377.0" prefWidth="412.0" style="-fx-border-color: black;">
+      <Pane layoutX="152.0" layoutY="11.0" prefHeight="377.0" prefWidth="435.0" style="-fx-border-color: black;">
          <children>
             <Label layoutX="97.0" layoutY="-2.0" text="Mantenimientos">
                <font>
@@ -63,19 +63,28 @@
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <TextField layoutX="59.0" layoutY="43.0" prefHeight="25.0" prefWidth="97.0" />
-            <ComboBox layoutX="206.0" layoutY="43.0" prefHeight="25.0" prefWidth="118.0" />
+            <TextField fx:id="filtroSpace" layoutX="59.0" layoutY="43.0" prefHeight="25.0" prefWidth="97.0" />
+            <ComboBox fx:id="filtroCombo" layoutX="206.0" layoutY="43.0" prefHeight="25.0" prefWidth="118.0" />
             <Button layoutX="338.0" layoutY="43.0" mnemonicParsing="false" text="Filtrar" />
-            <TableView layoutX="14.0" layoutY="84.0" prefHeight="252.0" prefWidth="385.0">
+            <TableView fx:id="pricesTable" layoutX="8.0" layoutY="84.0" prefHeight="112.0" prefWidth="422.0">
               <columns>
-                <TableColumn prefWidth="150.0" text="Precio de lunes a sábado" />
-                <TableColumn prefWidth="107.0" text="Precio domingos" />
-                  <TableColumn prefWidth="127.0" text="ID" />
+                <TableColumn fx:id="weekPriceColumn" prefWidth="150.0" text="Precio de lunes a sábado" />
+                <TableColumn fx:id="sundayPriceColumn" prefWidth="119.0" text="Precio domingos" />
+                  <TableColumn fx:id="roomColumn" prefWidth="87.0" text="Sala" />
+                  <TableColumn fx:id="idColumn" prefWidth="65.0" text="ID" />
               </columns>
             </TableView>
             <Button layoutX="23.0" layoutY="338.0" mnemonicParsing="false" text="Eliminar" />
             <Button layoutX="108.0" layoutY="338.0" mnemonicParsing="false" text="Editar" />
-            <Button layoutX="196.0" layoutY="338.0" mnemonicParsing="false" text="Insertar" />
+            <Button layoutX="310.0" layoutY="338.0" mnemonicParsing="false" text="Insertar" />
+            <Label layoutX="286.0" layoutY="248.0" text="Añadir precio">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="newWeekPrice" layoutX="195.0" layoutY="273.0" prefHeight="25.0" prefWidth="126.0" promptText="Precio entre semana" />
+            <TextField fx:id="newSundayPrice" layoutX="324.0" layoutY="273.0" prefHeight="25.0" prefWidth="106.0" promptText="Precio domingos" />
+            <TextField fx:id="newRoom" layoutX="289.0" layoutY="304.0" prefHeight="25.0" prefWidth="97.0" promptText="sala" />
          </children>
       </Pane>
    </children>
