--- a/src/main/resources/proyecto2/proyecto2anddyprendasmatarrita/Species.fxml
+++ b/src/main/resources/proyecto2/proyecto2anddyprendasmatarrita/Species.fxml
@@ -25,6 +25,7 @@
                   <MenuItem mnemonicParsing="false" onAction="#goToMTopics" text="Temáticas" />
                   <MenuItem mnemonicParsing="false" onAction="#goToMPrices" text="Precios" />
                   <MenuItem mnemonicParsing="false" onAction="#goToMCreditCards" text="Comisiones" />
+                  <MenuItem mnemonicParsing="false" onAction="#goToMMuseums" text="Museos" />
               </items>
                <font>
                   <Font size="10.0" />
