--- a/src/main/resources/proyecto2/proyecto2anddyprendasmatarrita/creditCards.fxml
+++ b/src/main/resources/proyecto2/proyecto2anddyprendasmatarrita/creditCards.fxml
@@ -13,35 +13,36 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyecto2.proyecto2anddyprendasmatarrita.ComisionesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyecto2.proyecto2anddyprendasmatarrita.CreditCardsController">
    <children>
       <Pane layoutX="9.0" layoutY="11.0" prefHeight="377.0" prefWidth="167.0" style="-fx-border-color: black;">
          <children>
             <MenuButton layoutX="14.0" layoutY="162.0" mnemonicParsing="false" text="Mantenimientos">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#goToMRooms" text="Salas" />
-                <MenuItem mnemonicParsing="false" onAction="#goToMCollections" text="Colecciones" />
+               <items>
+                 <MenuItem mnemonicParsing="false" onAction="#goToMRooms" text="Salas" />
+                 <MenuItem mnemonicParsing="false" onAction="#goToMCollections" text="Colecciones" />
                   <MenuItem mnemonicParsing="false" onAction="#goToMSpecies" text="Especies" />
                   <MenuItem mnemonicParsing="false" onAction="#goToMTopics" text="Temáticas" />
                   <MenuItem mnemonicParsing="false" onAction="#goToMPrices" text="Precios" />
                   <MenuItem mnemonicParsing="false" onAction="#goToMCreditCards" text="Comisiones" />
-              </items>
+                  <MenuItem mnemonicParsing="false" onAction="#goToMMuseums" text="Museos" />
+               </items>
             </MenuButton>
             <MenuButton layoutX="14.0" layoutY="187.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Entradas">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#goToSellEntrances" text="Vender entrada" />
-                <MenuItem mnemonicParsing="false" onAction="#goToValidEntrances" text="Validar entrada" />
-              </items>
+               <items>
+                 <MenuItem mnemonicParsing="false" onAction="#goToSellEntrances" text="Vender entrada" />
+                 <MenuItem mnemonicParsing="false" onAction="#goToValidEntrances" text="Validar entrada" />
+               </items>
             </MenuButton>
             <MenuButton layoutX="14.0" layoutY="212.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Valoración">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#goToRateRooms" text="Valorar salas" />
-              </items>
+               <items>
+                 <MenuItem mnemonicParsing="false" onAction="#goToRateRooms" text="Valorar salas" />
+               </items>
             </MenuButton>
             <MenuButton layoutX="14.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Reportes">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#goToReports" text="Reportes" />
-              </items>
+               <items>
+                 <MenuItem mnemonicParsing="false" onAction="#goToReports" text="Reportes" />
+               </items>
             </MenuButton>
             <ImageView fitHeight="140.0" fitWidth="152.0" layoutX="8.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
          </children>
@@ -65,19 +66,19 @@
             </Label>
             <TextField fx:id="filtroSpace" layoutX="59.0" layoutY="43.0" prefHeight="25.0" prefWidth="97.0" />
             <ComboBox fx:id="filtroCombo" layoutX="206.0" layoutY="43.0" prefHeight="25.0" prefWidth="118.0" />
-            <Button layoutX="338.0" layoutY="43.0" mnemonicParsing="false" text="Filtrar" />
+            <Button layoutX="338.0" layoutY="43.0" mnemonicParsing="false" onAction="#filterData" text="Filtrar" />
             <TableView fx:id="creditCardsTable" layoutX="14.0" layoutY="84.0" prefHeight="181.0" prefWidth="385.0">
-              <columns>
-                <TableColumn fx:id="typeColumn" prefWidth="170.0" text="Tipo de tarjeta" />
-                <TableColumn fx:id="comisionColumn" prefWidth="110.0" text="Comisión cobrada" />
+               <columns>
+                 <TableColumn fx:id="typeColumn" prefWidth="170.0" text="Tipo de tarjeta" />
+                 <TableColumn fx:id="comisionColumn" prefWidth="110.0" text="Comisión cobrada" />
                   <TableColumn fx:id="idColumn" prefWidth="104.0" text="ID" />
-              </columns>
+               </columns>
             </TableView>
-            <Button layoutX="23.0" layoutY="338.0" mnemonicParsing="false" text="Eliminar" />
-            <Button layoutX="167.0" layoutY="338.0" mnemonicParsing="false" text="Editar" />
-            <Button layoutX="324.0" layoutY="338.0" mnemonicParsing="false" text="Insertar" />
+            <Button layoutX="23.0" layoutY="338.0" mnemonicParsing="false" onAction="#delete" text="Eliminar" />
+            <Button layoutX="167.0" layoutY="338.0" mnemonicParsing="false" onAction="#updateInDB" text="Editar" />
+            <Button layoutX="324.0" layoutY="338.0" mnemonicParsing="false" onAction="#addToDB" text="Insertar" />
             <TextField fx:id="newNameType" layoutX="190.0" layoutY="300.0" prefHeight="25.0" prefWidth="97.0" promptText="Nombre" />
-            <Label layoutX="239.0" layoutY="277.0" text="Añadir tipo de  tarjeta">
+            <Label layoutX="239.0" layoutY="277.0" text="Añadir tipo de tarjeta">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
